working calculations and display (includes SCRUM-241)

--- a/app/templates/upcoming_tests.html
+++ b/app/templates/upcoming_tests.html
@@ -58,34 +58,34 @@
 
     <tr>
         <td>Standard Time</td>
-        <td>{{standard_time[0]}}</td>
-        <td>{{standard_time[1]}}</td>
-        <td>{{standard_time[2]}}</td>
-        <td>{{standard_time[3]}}</td>
-        <td>{{standard_time[4]}}</td>
-        <td>{{standard_time[5]}}</td>
-        <td>{{standard_time[6]}}</td>
-        <td>{{standard_time[7]}}</td>
+        <td>{{test_day_numbers.firststandard8}}</td>
+        <td>{{test_day_numbers.firststandard9}}</td>
+        <td>{{test_day_numbers.firststandard10}}</td>
+        <td>{{test_day_numbers.reteststandard8}}</td>
+        <td>{{test_day_numbers.reteststandard9}}</td>
+        <td>{{test_day_numbers.reteststandard10}}</td>
+        <td>{{test_day_numbers.totalstandard}}</td>
+        <td>{{test_day_numbers.totalstandardrooms}}</td>
     </tr>
 
     <tr>
         <td>Eligible for Accommodations</td>
-        <td>{{accomms_eligible[0]}}</td>
-        <td>{{accomms_eligible[1]}}</td>
-        <td>{{accomms_eligible[2]}}</td>
-        <td>{{accomms_eligible[3]}}</td>
-        <td>{{accomms_eligible[4]}}</td>
-        <td>{{accomms_eligible[5]}}</td>
-        <td>{{accomms_eligible[6]}}</td>
-        <td>{{accomms_eligible[7]}}</td>
+        <td>{{test_day_numbers.firstaccomms8}}</td>
+        <td>{{test_day_numbers.firstaccomms9}}</td>
+        <td>{{test_day_numbers.firstaccomms10}}</td>
+        <td>{{test_day_numbers.retestaccomms8}}</td>
+        <td>{{test_day_numbers.retestaccomms9}}</td>
+        <td>{{test_day_numbers.retestaccomms10}}</td>
+        <td>{{test_day_numbers.totalaccomms}}</td>
+        <td>{{test_day_numbers.totalaccommsrooms}}</td>
     </tr>
 
     <tr>
         <td>Totals</td>
-        <td colspan="3">Total First Test: {{totals[0]}}</td>
-        <td colspan="3">Total Retest: {{totals[1]}}</td>
-        <td>Total Testers: {{totals[2]}}</td>
-        <td>Total Rooms: {{totals[3]}}</td>
+        <td colspan="3">Total First Test: {{test_day_numbers.totalfirsttesters}}</td>
+        <td colspan="3">Total Retest: {{test_day_numbers.totalretesters}}</td>
+        <td>Total Testers: {{test_day_numbers.totalstudents}}</td>
+        <td>Total Rooms: {{test_day_numbers.totalrooms}}</td>
     </tr>
 
     
