--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -19,46 +19,17 @@
 <br>
 <br>
 <h3>SchoolMint Data Upload</h3>
-<form action="{{ url_for('main.upload_csv') }}" method="POST" enctype="multipart/form-data">
-    <label for="file">Upload CSV:</label>
-    <input type="file" name="file" accept=".csv" required>
-    <button type="submit">Upload</button>
+<form action="{{ url_for('main.upload_schoolmint_csv') }}" method="POST" enctype="multipart/form-data">
+    <label for="file">Upload SchoolMint CSV:</label>
+    <input type="file" name="schoolmintfile" accept=".csv" required>
+    <br>
+    <br>
+    <label for="file">Upload Riverside CSV (optional):</label>
+    <input type="file" name="riversidefile" accept=".csv">
+    <button type="submit">Proceed to Main Menu</button>
 </form>
 
-
-
-<form action="/menu" method="GET">
-    <button type="submit" class="btn" style="margin-top: 1em;">
-        Proceed with SchoolMint Data Only
-    </button>
-</form>
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<h3>Riverside Data Upload</h3>
-<form action="{{ url_for('main.upload_csv') }}" method="POST" enctype="multipart/form-data">
-    <label for="file">Upload CSV:</label>
-    <input type="file" name="file" accept=".csv" required>
-    <button type="submit">Upload</button>
-</form>
-
-<form action="/menu" method="GET">
-    <button type="submit" class="btn" style="margin-top: 1em;">
-        Proceed after Merging Riverside into SchoolMint
-    </button>
-</form>
-
-<br>
-<br>
-<br>
-
+        <p>{{ uploadMintresults }}</p>
 
 </body>
 </html>
