improved the user workflow to be more intuitive and tidied up some of the tests

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -35,9 +35,11 @@
 
 <div class="vertical-menu">
   <a href="/point_inputs" style="text-align: center;">Enter Report Card Grades</a>
+  <a href="/merge_riverside" style="text-align: center;">Merge Riverside File</a>
   <a href="/exports" style="text-align: center;">Prepare csv for Export</a>
   <a href="/upcoming_tests" style="text-align: center;">Upcoming Tests Info</a>
   <a href="/unresponsive_students" style="text-align: center;">Unresponsive Students</a>
+  <a href="/exports" style="text-align: center;">Prepare csv for Export</a>
 </div>
 
 </body>
