--- a/app/templates/exports.html
+++ b/app/templates/exports.html
@@ -5,20 +5,14 @@
 </head>
 <body>
     <h2>Exports</h2>
-    <form action="{{ url_for('main.upload_csv') }}" method="POST" enctype="multipart/form-data">
-        <label for="file">Upload CSV:</label>
-        <input type="file" name="file" accept=".csv" required>
-        <button type="submit">Upload</button>
+
+    <form action="{{ url_for('main.export_csv') }}", method = "POST">
+        <button type="submit">Download csv with Updated Student Data</button>
     </form>
 
-    <br>
-
-    <form action="{{ url_for('main.export_csv') }}" method="GET">
-        <button type="submit">Download Updated CSV</button>
-    </form>
 
     <br>
-    <a href="{{ url_for('main.index') }}"><button type="button">Back to Home</button></a>
+    <a href="{{ url_for('main.menu') }}"><button type="button">Back to Main Menu</button></a>
     
 </body>
 </html>
