--- a/app/templates/point_inputs.html
+++ b/app/templates/point_inputs.html
@@ -4,6 +4,7 @@
     <title>Flask App</title>
 </head>
 <body>
+    {% include '_breadcrumbs.html' %}
     <h2>Search Students</h2>    
     <label for="site-search">Search for Student by ID:</label>
 
