--- a/app/templates/student_details.html
+++ b/app/templates/student_details.html
@@ -4,6 +4,7 @@
     <title>Flask App</title>
 </head>
 <body>
+    {% include '_breadcrumbs.html' %}
     <h1>Student Details</h1>
     <h2>Student ID: {{ results.id }}</h2>
     <h2>Applying for Grade: {{ results.grade }}</h2>
