--- a/app/templates/enter_report_card.html
+++ b/app/templates/enter_report_card.html
@@ -22,6 +22,7 @@
     </style>
 </head>
 <body>
+    {% include '_breadcrumbs.html' %}
     <h2>Enter Report Card Info</h2>
     <h3>Student ID: {{ results.id }}</h3>
     <h3>Applying for Grade: {{ results.grade }}</h3>
