--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,6 +4,7 @@
     <title>LogIn</title>
 </head>
 <body>
+    {% include '_breadcrumbs.html' %}
     <h1 style="text-align: center;">Admissions Management System</h1>
 <h4 style="text-align: center;">Developed for Benjamin Franklin High School</h4>
 <div style="text-align: center;">
