--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -29,6 +29,7 @@
 </style>
 </head>
 <body>
+{% include '_breadcrumbs.html' %}
 
 <h1 style="text-align: center;">Admissions Management System</h1>
 <h4 style="text-align: center;">Developed for Benjamin Franklin High School</h4>
