--- a/app/templates/merge_riverside.html
+++ b/app/templates/merge_riverside.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+{% include '_breadcrumbs.html' %}
 
 <h1 style="text-align: center;">Admissions Management System</h1>
 <h4 style="text-align: center;">Developed for Benjamin Franklin High School</h4>
