--- a/app/templates/unresponsive_students.html
+++ b/app/templates/unresponsive_students.html
@@ -4,6 +4,7 @@
     <title>Flask App</title>
 </head>
 <body>
+    {% include '_breadcrumbs.html' %}
     <h2>Unresponsive Students</h2>
     <p>Here is where we'll have details about unresponsive students</p>
 </body>
