--- a/app/templates/upcoming_tests.html
+++ b/app/templates/upcoming_tests.html
@@ -4,6 +4,8 @@
     <title>Admissions Management System</title>
 </head>
 <body>
+    {% include '_breadcrumbs.html' %}
+
     <h2>Upcoming Tests</h2>
 
             <style>
