--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -26,7 +26,7 @@
     <input type="file" name="schoolmintfile" accept=".csv" required>
     <br>
     <br>
-    <button type="submit">Proceed to Main Menu</button>
+    <button type="submit">Upload</button>
 </form>
 
         <p>{{ uploadresults }}</p>
