--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -35,12 +35,14 @@
 <h4 style="text-align: center;">Developed for Benjamin Franklin High School</h4>
 
 <div class="vertical-menu">
-  <a href="/point_inputs" style="text-align: center;">Enter Report Card Grades</a>
+  <a href="/point_inputs" style="text-align: center;">View/Update Student Scores</a>
   <a href="/merge_riverside" style="text-align: center;">Merge Riverside File</a>
   <a href="/upcoming_tests" style="text-align: center;">Upcoming Tests Info</a>
   <a href="/unresponsive_students" style="text-align: center;">Unresponsive Students</a>
   <a href="/exports" style="text-align: center;">Prepare csv for Export</a>
 </div>
+
+<a href="/logout" style = "text-align:center"><button type="button">Logout</button></a>
 
 </body>
 </html>
