--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -8,7 +8,7 @@
 <h1 style="text-align: center;">Admissions Management System</h1>
 <h4 style="text-align: center;">Developed for Benjamin Franklin High School</h4>
 <div style="text-align: center;">
-    <img src="{{ url_for('static', filename='/images/ams_logo.png') }}" width="300" height="200">
+    <img src="{{ url_for('static', filename='images/ams_logo.png') }}" width="300" height="200">
     <br>
     <a href="/menu">Proceed with Dummy Data (for development)</a>
 </div>
