updated dummy data and reordered fields

--- a/app/templates/point_inputs.html
+++ b/app/templates/point_inputs.html
@@ -1,3 +1,4 @@
+    {% include '_breadcrumbs.html' %}
     <h2>Search Students</h2>    
     <label for="site-search">Search for Student by ID:</label>
 
