Added table_parser + clear filter button + fixed tests

--- a/app/templates/point_inputs.html
+++ b/app/templates/point_inputs.html
@@ -33,6 +33,10 @@
           </select>
         </div>
         {% endif %}
+        
+    <!-- Clear Filter Button -->
+      <div class="col-md-4 align-self-end">
+        <a href="{{ url_for('main.point_inputs') }}" class="btn btn-secondary">Clear Filters</a>
       </div>
     </form>
 
