gpa prediction made only for eligible students and displayed on student details page

--- a/app/templates/student_details.html
+++ b/app/templates/student_details.html
@@ -9,6 +9,7 @@
     <h2>Student ID: {{ results.id }}</h2>
     <h2>Applying for Grade: {{ results.grade }}</h2>
     <h2> Current School: {{ results.current_school }}</h2>
+    <h2> Predicted GPA: {{ results.pred_gpa }}</h2>
     
         <style>
         table, th, td {
