--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
+
 {% include '_breadcrumbs.html' %}
 
 
@@ -24,10 +21,9 @@
     <input type="file" name="schoolmintfile" accept=".csv" required>
     <br>
     <br>
-    <button type="submit">Upload</button>
+    <button type="submit" class="btn btn-primary">Upload</button>
+
 </form>
 
         <p>{{ uploadresults }}</p>
-
-</body>
-</html>
+{% endblock %}
