--- a/app/templates/point_inputs.html
+++ b/app/templates/point_inputs.html
@@ -13,7 +13,7 @@
         <!-- Filter Field Dropdown -->
         <div class="col-md-4">
           <label for="filter_field">Filter by:</label>
-          <select class="form-control" name="filter_field" id="filter_field" onchange="this.form.submit()">
+          <select class="form-control" name="filter_field" id="filter_field" class="form-select" onchange="this.form.submit()">
             <option disabled {% if not filter_field %}selected{% endif %}>Select Filter</option>
             <option value="grade" {% if filter_field == 'grade' %}selected{% endif %}>Grade</option>
             <option value="status" {% if filter_field == 'status' %}selected{% endif %}>Status</option>
@@ -25,7 +25,7 @@
         {% if filter_values %}
         <div class="col-md-4">
           <label for="filter_value">Select Value:</label>
-          <select class="form-control" name="filter_value" id="filter_value" onchange="this.form.submit()">
+          <select class="form-control" name="filter_value" id="filter_value" class="form-select" onchange="this.form.submit()">
             <option disabled>Select Value</option>
             {% for v in filter_values %} 
               <option value="{{ v }}" {% if request.args.get('filter_value', '').lower() == v.lower() %}selected{% endif %}>{{ v }}</option>
@@ -60,7 +60,7 @@
 {% extends "base.html" %}   
 
 {% block content %}
-  <table id="data" class="table table-striped">
+  <table id="data" class="table table-striped align-middle display">
     <thead>
       <tr>
         {% for header in headers %}
