--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,27 +1,45 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>LogIn</title>
-</head>
-<body>
-    {% include '_breadcrumbs.html' %}
-    <h1 style="text-align: center;">Admissions Management System</h1>
-<h4 style="text-align: center;">Developed for Benjamin Franklin High School</h4>
-<div style="text-align: center;">
-    <img src="{{ url_for('static', filename='/images/ams_logo.png') }}" width="300" height="200">
-    <br>
-</div>
-<br>
-    <form action = '/' method = "POST">
-        Email: <input type = 'text', name = 'email' class="form-control"><br><br>
-        Password: <input type = 'passsord' name = 'password' class="form-control"><br><br>
-    <button type="submit" name="login_btn" value="Login" class="btn btn-primary">Login</button>
-    </form>
-        <p>Don't have an account?  Create one!</p>
-        <br>
-        <a href="/signup" class="btn btn-outline-secondary">Create an Account</a>
-        <br>
-        <br>
-        <p>{{ results }}</p>
-</body>
-</html>
+{% extends "coreui_base_wow.html" %}
+{% block title %}Log In{% endblock %}
+
+{% block content %}
+  {% include '_breadcrumbs.html' %}
+
+  <div class="container-lg">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-8 col-lg-6">
+
+        <div class="text-center mb-4">
+          <img src="{{ url_for('static', filename='images/ams_logo.png') }}"
+               alt="AMS Logo" class="img-fluid" style="max-height: 120px;">
+          <h1 class="h3 mt-3 mb-1">Admissions Management System</h1>
+          <h2 class="h6 text-body-secondary">Developed for Benjamin Franklin High School</h2>
+        </div>
+
+        {% if results %}
+          <div class="alert alert-info">{{ results }}</div>
+        {% endif %}
+
+        <div class="card">
+          <div class="card-header">Log In</div>
+          <div class="card-body">
+            <form action="{{ url_for('main.index') }}" method="POST" class="row g-3">
+              <div class="col-12">
+                <label for="email" class="form-label">Email</label>
+                <input id="email" name="email" type="email" class="form-control" required autofocus>
+              </div>
+              <div class="col-12">
+                <label for="password" class="form-label">Password</label>
+                <input id="password" name="password" type="password" class="form-control" required>
+              </div>
+              <div class="col-12 d-flex justify-content-between">
+                <a href="{{ url_for('main.signup') }}" class="btn btn-outline-secondary">Create an Account</a>
+                <button type="submit" name="login_btn" value="Login" class="btn btn-primary">Login</button>
+              </div>
+            </form>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+{% endblock %}
