--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -1,10 +1,7 @@
-{% extends "base.html" %}
+{% extends "coreui_base_wow.html" %}
 {% block content %}
 
 {% include '_breadcrumbs.html' %}
-
-
-
 <h1 style="text-align: center;">Admissions Management System</h1>
 <h4 style="text-align: center;">Developed for Benjamin Franklin High School</h4>
 <div style="text-align: center;">
