--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "coreui_base_wow.html" %}
 {% block content %}
 
 {% include '_breadcrumbs.html' %}
@@ -14,6 +14,5 @@
   <a href="/exports" style="text-align: center;">Prepare csv for Export</a>
 </div>
 
-<a href="/logout" style = "text-align:center"><button type="button">Logout</button></a>
-
+<a href="/logout" class="btn btn-primary">Logout</a>
 {% endblock %}
